tests/Rules/Media/Fixtures/invalid/autoplay_no_muted.html.twig
<video autoplay><source src="v.mp4" /></video>
